# curriclean

./: CLAUDE.md  OVERVIEW.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  boot.sh  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth_and_budget.py  0003_application_suggested_profiles.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: applications.py  auth.py  cv.py  match.py  suggestions.py
backend/app/services/: brave.py  budget.py  email.py  llm.py  passwords.py  tokens.py
backend/scripts/: seed.py
backend/tests/: test_llm_helpers.py  test_schemas.py
curriclean-api/: .dev.vars.example  README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
curriclean-api/migrations/: 001_initial.sql
curriclean-api/src/: index.ts  types.ts
curriclean-api/src/lib/: auth.ts  email.ts
curriclean-api/src/routes/: applications.ts  cv.ts  suggestions.ts
curriclean-api/src/services/: brave.ts  budget.ts
public-docs/: api-reference.md  data-model.md  deployment.md  environment-variables.md  local-development.md  stack.md
specfit-api/: .dev.vars.example  README.md  wrangler.jsonc
specfit-api/seeds/: seed_dev.sql
specfit-api/src/: types.ts
specfit-api/src/lib/: email.ts  pdf.ts
specfit-api/src/routes/: auth.ts  match.ts
web-client/: .env.example  DEPLOY.md  cloudflare-env.d.ts  logo.html  package-lock.json  package.json  wrangler.jsonc
web-client/public/: site.webmanifest
web-client/src/lib/: api.ts  (+5 more)
(+19 files in other folders)
